Fix overflow for Main based on difficulty

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -22,6 +22,6 @@
   }
 }
 
-.main.initial {
+.main.expand {
   height: 100%;
 }
